1. Making changes to the Simias configuration files.
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/SimiasStandAlone@5205 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -318,6 +318,7 @@ AC_SUBST(STORELIB)
 AC_SUBST(STORELIB_PATH)
 AC_SUBST(webdir)
 AC_SUBST(webbindir)
+AC_SUBST(modulesdir)
 AC_SUBST(StoreProviderAssembly)
 AC_SUBST(StoreProviderType)
 AC_SUBST(GSOAP_PATH)
@@ -327,8 +328,10 @@ AC_SUBST(GSOAP_PATH)
 #
 webdir="${libexecdir}/web"
 webbindir="${webdir}/bin"
+modulesdir="${webdir}/modules"
 AC_SUBST(webdir)
 AC_SUBST(webbindir)
+AC_SUBST(modulesdir)
 
 
 #
