--- a/simias/src/SimiasClient/SimiasClient.csproj
+++ b/simias/src/SimiasClient/SimiasClient.csproj
@@ -169,6 +169,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Manager.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "MyEnvironment.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
