1. Fixes for the Linux Client to run over the new Simias.
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/SimiasStandAlone@5267 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/LinuxClient/application/ifolder.in
+++ b/ifolder/src/LinuxClient/application/ifolder.in
@@ -26,5 +26,5 @@
 export MONO_PATH=@_prefix_@/lib:@_webbindir_@:$MONO_PATH
 export LD_LIBRARY_PATH=@_prefix_@/lib:@_webbindir_@:$LD_LIBRARY_PATH
 cd @_prefix_@/bin
-mono iFolderClient.exe
+mono iFolderClient.exe $@
 
