--- a/test/CollectionStore/CollectionStoreTests.csproj
+++ b/test/CollectionStore/CollectionStoreTests.csproj
@@ -124,6 +124,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "DiskSpaceQuotaTests.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "FindMemberTests.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
