fixing build problem
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5305 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/FlaimProvider/FlaimWrapper/Makefile.am
+++ b/simias/src/FlaimProvider/FlaimWrapper/Makefile.am
@@ -94,7 +94,7 @@ install-exec-local: libFlaimWrapper.la
 	if test -e $(DESTDIR)$(webbindir)/FlaimWrapper$(SHARED_LIB_EXT); then \
 		rm $(DESTDIR)$(webbindir)/FlaimWrapper$(SHARED_LIB_EXT); \
 	fi;
-	ln -s $(DESTDIR)$(libdir)/libFlaimWrapper$(SHARED_LIB_EXT) $(DESTDIR)$(webbindir)/FlaimWrapper$(SHARED_LIB_EXT)
+	ln -s $(libdir)/libFlaimWrapper$(SHARED_LIB_EXT) $(DESTDIR)$(webbindir)/FlaimWrapper$(SHARED_LIB_EXT)
 
 uninstall-local:
 	cd $(DESTDIR)$(webbindir); rm -f FlaimWrapper$(SHARED_LIB_EXT)
