fixed up two problems in makefiles
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5316 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/api/Makefile.am
+++ b/simias/src/api/Makefile.am
@@ -1,19 +1,5 @@
-DIST_SUBDIRS = libsimias 
-
-if DARWIN
-SUBDIRS = libsimias
-
-endif
-
-if LINUX
-SUBDIRS = libsimias
-
-endif
-
-if WINDOWS
-SUBDIRS = libsimias
-
-endif
+DIST_SUBDIRS = libsimias WebService
+SUBDIRS = libsimias WebService
 
 EXTRA_DIST = 
 
