--- a/simias/other/SimpleServer/Makefile.am
+++ b/simias/other/SimpleServer/Makefile.am
@@ -9,7 +9,7 @@ SimpleServer_FLAGS = $(CSC_LIBFLAG)
 SimpleServer_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasLib.dll SimiasClient.dll
 SimpleServer_LIBPATH = ../../src/SimiasLib.dll ../../src/SimiasClient $(DESTDIR)$(webbindir)
 
-EXTRA_DIST = DomainService.asmx $(SimpleServer_CSFILES) SimpleServer.xml Simias.config.in Simias.SimpleServer.conf
+EXTRA_DIST = DomainService.asmx $(SimpleServer_CSFILES) SimpleServer.xml Simias.config.in Simias.SimpleServer.conf simpleserver.in simpleserver.cmd.in
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
@@ -19,20 +19,22 @@ endif
 
 NUNIT_TESTS := Simias.SimpleServer.dll
 
-if WINDOWS
-	FIXED_WEBDIR := $(shell cygpath --mixed $(webdir))
-else
-	FIXED_WEBDIR := $(webdir)
-endif
+simpleserver: simpleserver.in
+	sed -e 's,@_simiasdatadir_@,@simiasdatadir@,g' -e 's,@_webbindir_@,@webbindir@,g' $< > simpleserver
+	chmod +x $@
 
+simpleserver.cmd: simpleserver.cmd.in
+	sed -e 's,@_simiasdatadir_@,$(shell cygpath --mixed $(simiasdatadir)),g' $< > simpleserver.cmd
+	chmod +x $@
+	
 Simias.config: Simias.config.in
-	echo simiasdatadir = $(simiasdatadir)
 	sed -e 's,@_StoreProviderAssembly_@,@StoreProviderAssembly@,g' -e 's,@_StoreProviderType_@,@StoreProviderType@,g' $< > Simias.config
 	chmod +x $@
 
-all: $(NUNIT_TESTS) Simias.config
+all: $(NUNIT_TESTS) Simias.config simpleserver simpleserver.cmd
 
 Simias.SimpleServer.dll: $(SimpleServer_CSFILES) $(SimpleServer_RESOURCES)
+	echo simiasdatadir=$(simiasdatadir)
 	$(CSC) /out:$@ $(CSCFLAGS) $(SimpleServer_FLAGS) $(SimpleServer_LIBS:%=/r:%) $(SimpleServer_LIBPATH:%=/lib:%) $(SimpleServer_RESOURCES:%=$(ICON_FLAG)%) $(SimpleServer_CSFILES_CSC) $(DOC_FILE_CMD)
 	
 if DEBUG
@@ -42,21 +44,29 @@ endif
 endif
 
 install-exec-local: all
-	$(mkinstalldirs) $(DESTDIR)$(webbindir)
+	$(mkinstalldirs) $(DESTDIR)$(webbindir) $(simiasdatadir) $(simiasdatadir)/modules
 	$(INSTALL_PROGRAM) SimpleServer.xml $(DESTDIR)$(sysconfdir)
-	$(INSTALL_PROGRAM) simias-server-bootstrap.config $(DESTDIR)$(sysconfdir)
+	$(INSTALL_PROGRAM) Simias.config $(simiasdatadir)
 	$(INSTALL_PROGRAM) DomainService.asmx $(DEBUG_FILES) $(DESTDIR)$(webdir)
 	$(INSTALL_PROGRAM) $(NUNIT_TESTS) $(DEBUG_CHECK_FILES) $(DESTDIR)$(webbindir)
-if WINDOWS
-	$(INSTALL_PROGRAM) win.web.config $(DESTDIR)$(webdir)/web.config
+	$(INSTALL_PROGRAM) Simias.SimpleServer.conf $(simiasdatadir)/modules
+if WINDOWS	
+	$(INSTALL_PROGRAM) simpleserver.cmd $(DESTDIR)$(bindir)
 else
-	$(INSTALL_PROGRAM) mono.web.config $(DESTDIR)$(webdir)/server.web.config
+	$(INSTALL_PROGRAM) simpleserver $(DESTDIR)$(bindir)
 endif	
-	
 
 uninstall-local:
-	cd $(DESTDIR)$(webbindir); $(NUNIT) $(NUNIT_FLAGS) /xml:SimiasTests.test.xml $(NUNIT_TESTS)
-	cd $(DESTDIR)$(webdir); rm -f  web.config DomainService.asmx
+	cd $(DESTDIR)$(webdir); rm -f DomainService.asmx
+	cd $(DESTDIR)$(sysconfdir); rm -f SimpleServer.xml
+	cd $(DESTDIR)$(webbindir); rm -f $(NUNIT_TESTS) $(DEBUG_CHECK_FILES)
+	cd $(simiasdatadir); rm -f Simias.config
+	cd $(simiasdatadir)/modules; rm -f Simias.SimpleServer.conf
+if WINDOWS	
+	cd $(DESTDIR)$(bindir); rm -f simpleserver.cmd
+else
+	cd $(DESTDIR)$(bindir); rm -f simpleserver
+endif
 
 installcheck-local: install
 		
