1. Final changes for Simias standalone before merge back into head.
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/SimiasStandAlone@5321 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/other/SimpleServer/Makefile.am
+++ b/simias/other/SimpleServer/Makefile.am
@@ -20,7 +20,7 @@ endif
 NUNIT_TESTS := Simias.SimpleServer.dll
 
 simpleserver: simpleserver.in
-	sed -e 's,@_simiasdatadir_@,@simiasdatadir@,g' -e 's,@_webbindir_@,@webbindir@,g' $< > simpleserver
+	sed -e 's,@_simiasdatadir_@,@simiasdatadir@,g' -e 's,@_webbindir_@,@webbindir@,g' -e 's,@_bindir_@,@bindir@,g' $< > simpleserver
 	chmod +x $@
 
 simpleserver.cmd: simpleserver.cmd.in
