Initial prototype of journaling.
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/Journaling@5322 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/Simias.csproj
+++ b/simias/Simias.csproj
@@ -184,6 +184,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "src\CollectionStore\Journal.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "src\CollectionStore\LinkNode.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
