--- a/simias/src/api/libsimias/Makefile.am
+++ b/simias/src/api/libsimias/Makefile.am
@@ -8,17 +8,17 @@ dist-hook:
 	rm -rf `find $(distdir) |grep envC.c`
 	rm -rf `find $(distdir) |grep stdsoap2.c`
 
-lib_LTLIBRARIES = libsimias.la
+lib_LTLIBRARIES = libsimias2.la
 
-libsimias_la_SOURCES = \
+libsimias2_la_SOURCES = \
  	envC.c simiaswebClientLib.c stdsoap2.c simias_internal.c simias_internal.h simias_handle.c simias.h simias_domain.c simias_nodelist.c
  	
-libsimias_la_CFLAGS = \
+libsimias2_la_CFLAGS = \
 	-DWITH_NONAMESPACES -DWITH_COOKIES
 
 bin_PROGRAMS = testapi
 testapi_SOURCES = test.c
-LDADD = libsimias.la
+LDADD = libsimias2.la
 
 envC.c: $(srcdir)/stdsoap2.c
 	> $(srcdir)/env.h
