1. Fixing make package problems with SimpleServer.
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/SimiasStandAlone@5374 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/other/SimpleServer/Makefile.am
+++ b/simias/other/SimpleServer/Makefile.am
@@ -74,7 +74,7 @@ installcheck-local: install
 .PHONY: test
 test: installcheck
 
-CLEAN_FILES = $(NUNIT_TESTS) $(DOC_FILE_CLEAN)
+CLEAN_FILES = $(NUNIT_TESTS) $(DOC_FILE_CLEAN) Simias.config simpleserver simpleserver.cmd
 
 clean-local:
 	rm -rf $(CLEAN_FILES) $(COMMON_CLEAN_FILES)
