1. Fixing make package problems with SimpleServer.
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/SimiasStandAlone@5375 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/other/SimpleServer/Makefile.am
+++ b/simias/other/SimpleServer/Makefile.am
@@ -20,8 +20,10 @@ endif
 NUNIT_TESTS := Simias.SimpleServer.dll
 
 simpleserver: $(srcdir)/simpleserver.in
+if !WINDOWS
 	sed -e 's,@_simiasdatadir_@,@simiasdatadir@,g' -e 's,@_webbindir_@,@webbindir@,g' -e 's,@_bindir_@,@bindir@,g' $< > $@
 	chmod +x $@
+endif	
 
 simpleserver.cmd: $(srcdir)/simpleserver.cmd.in
 if WINDOWS
