1. Fixed some bugs. 2. Fixed StoreBrowser to run with the new Simias.exe
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/SimiasStandAlone@5381 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/tools/FormsStoreBrowser/FormsStoreBrowser.csproj
+++ b/simias/tools/FormsStoreBrowser/FormsStoreBrowser.csproj
@@ -97,7 +97,7 @@
                 <Reference
                     Name = "SimiasClient"
                     AssemblyName = "SimiasClient"
-                    HintPath = "..\..\..\..\final\web\bin\SimiasClient.dll"
+                    HintPath = "..\..\..\..\final.enterprise\web\bin\SimiasClient.dll"
                 />
             </References>
         </Build>
