--- a/simias/src/SimiasApp/Simias.csproj
+++ b/simias/src/SimiasApp/Simias.csproj
@@ -92,7 +92,7 @@
                 <Reference
                     Name = "SimiasClient"
                     AssemblyName = "SimiasClient"
-                    HintPath = "..\..\..\..\final\web\bin\SimiasClient.dll"
+                    HintPath = "..\..\..\..\final.enterprise\web\bin\SimiasClient.dll"
                 />
             </References>
         </Build>
