added new config for simias-shell
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/APIWORK@5384 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -454,6 +454,7 @@ src/POBoxWS/Makefile
 src/SyncService/Makefile
 src/SqliteProvider/Makefile
 src/libsimias/Makefile
+src/simias-shell/Makefile
 src/api/Makefile
 src/api/libsimias/Makefile
 src/api/WebService/Makefile
