Initial check-in of libifolder-gtk to allow all Linux applications (mostly Nautilus) to be able to reuse the main iFolder GUI dialogs.
Files modified:
	configure.in
	ifolder3-c.pc.in
	src/Makefile.am
	src/LinuxClient/library/iFolderPropertiesDialog.cs

Files added:
	src/libifolder-gtk/
		general-property-page.c
		ifolder-gtk.h
		ifolder-gtk-internal.c	(gSOAP is here)
		ifolder-gtk-internal.h
		Makefile.am
		sharing-property-page.c


git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/libifolder-gtk@5408 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -137,12 +137,14 @@ GTK_SHARP_MINIMUM_VERSION=1.0.4
 GNOME_SHARP_MINIMUM_VERSION=1.0.4
 GCONF_SHARP_MINIMUM_VERSION=1.0.4
 GDK20_MINIMUM_VERSION=2.2.3
+GTK20_MINIMUM_VERSION=2.4
 ATK_MINIMUM_VERSION=1.2.4
 AC_SUBST(GTK_SHARP_MINIMUM_VERSION)
 AC_SUBST(GNOME_SHARP_MINIMUM_VERSION)
 AC_SUBST(GLADE_SHARP_MINIMUM_VERSION)
 AC_SUBST(GCONF_SHARP_MINIMUM_VERSION)
 AC_SUBST(GDK20_MINIMUM_VERSION)
+AC_SUBST(GTK20_MINIMUM_VERSION)
 AC_SUBST(ATK_MINIMUM_VERSION)
 
 #
@@ -478,7 +480,12 @@ case $IFOLDER_OS in
 		PKG_CHECK_MODULES(GCONF_SHARP, gconf-sharp > $GCONF_SHARP_MINIMUM_VERSION)
 		AC_SUBST(GCONF_SHARP_PREFIX)
 		AC_SUBST(GCONF_SHARP_LIBS)
-        
+
+		PKG_CHECK_MODULES(LIBIFOLDER_GTK, [
+			gtk+-2.0 >= $GTK20_MINIMUM_VERSION
+			gdk-2.0 >= $GDK20_MINIMUM_VERSION])
+		AC_SUBST(LIBIFOLDER_GTK_CFLAGS)
+		AC_SUBST(LIBIFOLDER_GTK_LIBS)
     ;;
     darwin)
         PKG_CHECK_MODULES(SIMIAS_CLIENT_C, simias-client-c >= 1.0)
@@ -507,6 +514,7 @@ src/TrayIcon/Makefile
 src/TrayIcon/libtrayicon/Makefile
 src/WebService/Makefile
 src/libifolder/Makefile
+src/libifolder-gtk/Makefile
 src/OSXClient/Makefile
 src/OSXClient/Info.plist
 src/OSXClient/src/config.h
