1. Adding static C library to control Simias.exe.
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/SimiasStandAlone@5411 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/SimiasLib.csproj
+++ b/simias/SimiasLib.csproj
@@ -123,11 +123,7 @@
         </Build>
         <Files>
             <Include>
-                <File
-                    RelPath = "src\ChangeLog\ChangeLog.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
+                <Folder RelPath = "src\ChangeLog\" />
                 <File
                     RelPath = "src\CollectionStore\AccessControl.cs"
                     SubType = "Code"
@@ -135,6 +131,11 @@
                 />
                 <File
                     RelPath = "src\CollectionStore\BaseFileNode.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "src\CollectionStore\ChangeLog.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
