1. Adding static C library to control Simias.exe.
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/SimiasStandAlone@5413 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -462,6 +462,7 @@ Makefile
 src/Makefile
 src/SimiasClient/Makefile
 src/SimiasClient/libsimias-event/Makefile
+src/SimiasClient/libsimias-manager/Makefile
 src/SimiasLib.dll/Makefile
 src/SimiasLib.dll/SimiasLib.dll.config
 src/FlaimProvider/Makefile
